/*
 * Backpack - Skyscanner's Design System
 *
 * Copyright 2016 Skyscanner Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/* @flow strict */

import { render } from '@testing-library/react';

import BpkTableRow from './BpkTableRow';

describe('BpkTableRow', () => {
  it('should render correctly', () => {
    const { asFragment } = render(
      <table>
        <tbody>
          <BpkTableRow>
            <td />
          </BpkTableRow>
        </tbody>
      </table>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with custom class', () => {
    const { asFragment } = render(
      <table>
        <tbody>
          <BpkTableRow className="my-custom-class">
            <td />
          </BpkTableRow>
        </tbody>
      </table>,
    );
    expect(asFragment()).toMatchSnapshot();
  });

  it('should render correctly with arbitrary props', () => {
    const { asFragment } = render(
      <table>
        <tbody>
          <BpkTableRow id="my-custom-id" data-foo="bar">
            <td />
          </BpkTableRow>
        </tbody>
      </table>,
    );
    expect(asFragment()).toMatchSnapshot();
  });
});
