// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkTableRow should render correctly 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td>
          Table row data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableRow should render correctly with arbitrary props 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        data-foo="bar"
        id="my-custom-id"
      >
        <td>
          Table row data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`BpkTableRow should render correctly with custom class 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="my-custom-class"
      >
        <td>
          Table row data
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
